assessment/task1-gke/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hirelink-prod
  labels:
    app.kubernetes.io/part-of: hirelink
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
