assessment/task1-gke/k8s/base/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hirelink-api
  namespace: hirelink-prod
  labels:
    app: hirelink-api
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: hirelink-api
  template:
    metadata:
      labels:
        app: hirelink-api
    spec:
      serviceAccountName: hirelink-ksa
      automountServiceAccountToken: true
      terminationGracePeriodSeconds: 30
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: app
          image: us-central1-docker.pkg.dev/deadbots/hirelink/hirelink-api:v1.1.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /health/
              port: http
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /health/
              port: http
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /health/
              port: http
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: tmp
              mountPath: /tmp
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop: ["ALL"]
