assessment/task1-gke/k8s/base/05-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hirelink-web
  namespace: hirelink-prod
  labels:
    app: hirelink-web
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: hirelink-web
  template:
    metadata:
      labels:
        app: hirelink-web
    spec:
      serviceAccountName: hirelink-web-ksa
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 30
      volumes:
        - name: tmp
          emptyDir: {}
        - name: next-cache
          emptyDir: {}
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          image: us-central1-docker.pkg.dev/deadbots/hirelink/hirelink-web:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "700m"
              memory: "768Mi"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: next-cache
              mountPath: /app/.next/cache
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            capabilities:
              drop: ["ALL"]
